--- a/config.ini
+++ b/config.ini
@@ -13,12 +13,12 @@ filter_type = "exclude"
 filter_rule = "TextExpander|giveaway"
 
 [source002]
-name = "appinn"
-url = "https://meta.appinn.net/tag/chrome.rss,https://meta.appinn.net/tag/ios.rss,https://meta.appinn.net/tag/macos.rss"
-max_items = "0"
+name = "blockchain-technology"
+url = "https://arxiv.org/rss/cs.DC"
+max_items = "1"
 
 [source004]
-name = "robb-knight"
-url = "https://rknight.me/feed.xml"
+name = "vibe-coding"
+url = "https://arxiv.org/rss/cs.AI"
 max_items = "1"
 
