--- a/config.ini
+++ b/config.ini
@@ -14,11 +14,5 @@ filter_rule = "TextExpander|giveaway"
 
 [source002]
 name = "blockchain-technology"
-url = "https://arxiv.org/rss/cs.DC"
-max_items = "1"
-
-[source004]
-name = "vibe-coding"
-url = "https://arxiv.org/rss/cs.AI"
-max_items = "1"
-
+url = "https://eprint.iacr.org/rss/rss.xml"
+max_items = "2"
