--- a/config.ini
+++ b/config.ini
@@ -16,3 +16,6 @@ filter_rule = "TextExpander|giveaway"
 name = "blockchain-technology"
 url = "https://eprint.iacr.org/rss/rss.xml"
 max_items = "2"
+filter_apply = "title"
+filter_type = "exclude"
+filter_rule = "key"
